--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -57,5 +57,12 @@
       "providerPlugin": "awscloudformation",
       "dependsOn": []
     }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2022-02-04T00:46:40.330Z"
+    }
   }
 }
